[metadata]
name = ETtoolbox
author = Gregory H. Halverson
author-email = gregory.h.halverson@jpl.nasa.gov
description = USBR-JPL Second Generation ET Toolbox
long_description = file: README.md

[options.entry_points]
console_scripts =
    ET-Toolbox-Credentials = ETtoolbox.check_credentials:main
    ET-Toolbox-Tile = ETtoolbox.ETtoolbox_tile:main
    ET-Toolbox-Rio-Grande = ETtoolbox.ETtoolbox_riogrande:main
    ET-Toolbox-Historical = ETtoolbox.ETtoolbox_historical:main
